[WTFURL] Comparison between signed and unsigned integer expressions in URLUtil.cpp https://bugs.webkit.org/show_bug.cgi?id=108955

Reviewed by Benjamin Poulain.

* wtf/url/src/URLUtil.cpp:
(URLUtilities): Make the counter variable a signed integer to get rid of the warning.


Canonical link: https://commits.webkit.org/127183@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141927 268f45cc-cd09-0410-ab3c-d52691b4dbfc